// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Text/Heading default 1`] = `
.c0 {
  color: rgb(70,55,134);
  text-align: left;
  margin: 0;
  color: rgb(70,55,134);
  line-height: 1.25;
}

<h1
  className="sc-AykKK c0"
  color="rgb(70, 55, 134)"
  size={1}
>
  Charlie Bronson
</h1>
`;

exports[`Storyshots Text/Heading h1 w/light + grey 1`] = `
.c0 {
  color: rgb(70,55,134);
  text-align: left;
  margin: 0;
  color: rgb(70,55,134);
  line-height: 1.25;
  font-weight: 300;
}

<h1
  className="sc-AykKK c0"
  color="rgb(70, 55, 134)"
  size={1}
>
  Charlie Bronson
</h1>
`;

exports[`Storyshots Text/Heading h1 w/light 1`] = `
.c0 {
  color: rgb(70,55,134);
  text-align: left;
  margin: 0;
  color: rgb(70,55,134);
  line-height: 1.25;
  font-weight: 300;
}

<h1
  className="sc-AykKK c0"
  color="rgb(70, 55, 134)"
  size={1}
>
  Charlie Bronson
</h1>
`;

exports[`Storyshots Text/Heading h1 w/regular 1`] = `
.c0 {
  color: rgb(70,55,134);
  text-align: left;
  margin: 0;
  color: rgb(70,55,134);
  line-height: 1.25;
  font-weight: 400;
}

<h1
  className="sc-AykKK c0"
  color="rgb(70, 55, 134)"
  size={1}
>
  Charlie Bronson
</h1>
`;

exports[`Storyshots Text/Heading h2 w/align right 1`] = `
.c0 {
  color: rgb(70,55,134);
  text-align: right;
  margin: 0;
  color: rgb(70,55,134);
  line-height: 1.25;
}

<h2
  className="sc-AykKK c0"
  color="rgb(70, 55, 134)"
  size={2}
>
  Charlie Bronson
</h2>
`;

exports[`Storyshots Text/Heading h3 w/align center 1`] = `
.c0 {
  color: rgb(70,55,134);
  text-align: center;
  margin: 0;
  color: rgb(70,55,134);
  line-height: 1.25;
}

<h3
  className="sc-AykKK c0"
  color="rgb(70, 55, 134)"
  size={3}
>
  Charlie Bronson
</h3>
`;

exports[`Storyshots Text/Heading h4 w/color 1`] = `
.c0 {
  color: red;
  text-align: left;
  margin: 0;
  color: red;
  line-height: 1.25;
}

<h4
  className="sc-AykKK c0"
  color="red"
  size={4}
>
  Charlie Bronson
</h4>
`;
